clusters/dev/flux-system/phase-b-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-approved-git-egress
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/component: source-controller
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'
    - toFQDNs:
        - matchName: github.com
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
